# bswt-website-aws

./: LICENSE  Makefile  Pipfile  README.md
ansible_src/: ansible-requirements.yaml  playbook.yaml
ansible_src/roles/bootstrap_iam/files/: bswt-account-setup.yaml
ansible_src/roles/bootstrap_iam/tasks/: main.yaml
ansible_src/roles/website_instance/files/: bswt-website-2.yaml
ansible_src/roles/website_instance/tasks/: main.yaml
ansible_src/roles/website_setup/tasks/: main.yaml
ansible_src/roles/website_setup/vars/: main.yaml
cloudformation/: bswt-website.yaml
python/: pyproject.toml
terraform/: .terraform.lock.hcl  main.tf
